# CAD

./: .gitignore  CAD.sln  CMakeLists.txt  CMakePresets.json  Config.h  Config.h.in  README.md  Renderer.h  Window.cpp  main.cpp
CAD/: CAD.vcxproj  CAD.vcxproj.filters  Matrix.cpp  Matrix.h  Utils.cpp  Utils.h  imgui.ini
CAD/src/: Camera.cpp  Camera.h  CameraSubscriber.h  Config.h  ScreenSizeChangePublisher.cpp  ScreenSizeChangePublisher.h  ScreenSizeChangeSubscriber.h  main.cpp
CAD/src/Window/: Window.cpp  Window.h
CAD/src/Window/input/events/modded/: MouseClickEvent.h
CAD/src/Window/input/handlers/: CameraMovementInputHandler.cpp  CameraMovementInputHandler.h
CAD/src/gl/shaders/: coloredVertices.frag  coloredVertices.vert  ellipsoid.frag  ellipsoid.vert  texture.frag  texture.vert  torus.vert
CAD/src/gl/wrappers/: EBO.cpp  EBO.h  Program.cpp  Program.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
CAD/src/maths/: AxisAngleRotation.h  Bernstein.cpp  Bernstein.h  EulerAngles.h  Matrix.cpp  Matrix.h  RotationRepresentationsConverter.cpp  RotationRepresentationsConverter.h
CAD/src/renderer/: EntitiesFactory.cpp  EntitiesFactory.h  GUI.cpp  GUI.h  ObjectsFactory.h  ObjectsManager.cpp  ObjectsManager.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
CAD/src/renderer/commands/: AddPointCommand.cpp  AddPointCommand.h  ApplyGroupTransformation.cpp  ApplyGroupTransformation.h  CancelGroupTransformation.cpp  CancelGroupTransformation.h  ChangeGroupTransformation.cpp  ChangeGroupTransformation.h  Command.h  StartGroupTransformation.cpp  StartGroupTransformation.h
CAD/src/renderer/commands/GroupTransformationCommands/: ApplyGroupTransformationCommand.cpp  ApplyGroupTransformationCommand.h  CancelGroupTransformationCommand.cpp  CancelGroupTransformationCommand.h  ChangeGroupTransformationCommand.cpp  ChangeGroupTransformationCommand.h  StartGroupTransformationCommand.cpp  StartGroupTransformationCommand.h
CAD/src/renderer/gui/: GUIElement.h  GroupTransformationWindow.cpp  GroupTransformationWindow.h  MainMenuBar.cpp  MainMenuBar.h
CAD/src/renderer/gui/widgets/: Widgets.cpp  Widgets.h
CAD/src/renderer/objects/: Component.cpp  Component.h
CAD/src/renderer/objects/Components/: AdditionalTransformation.h  BezierC0.h  BezierC2.h  Cursor.h  Dirty.h  Mesh.cpp  Mesh.h  Point.h  Position.h  Rotation.h  ScaleRotation.h  Scaling.h  ScreenPosition.h  Selectable.h  TorusComponent.h  Transformation.h
CAD/src/renderer/objects/Cursos/: Cursor.cpp  Cursor.h
CAD/src/renderer/objects/Ellipsoid/: Coefficients.h  Ellipsoid.cpp  Ellipsoid.h
CAD/src/renderer/objects/Floor/: Floor.cpp  Floor.h
CAD/src/renderer/objects/Torus/: Torus.cpp  Torus.h
CAD/src/renderer/systems/: BezierC0System.cpp  BezierC0System.h  BezierC2System.cpp  BezierC2System.h  CursorSystem.cpp  CursorSystem.h  GUISystem.cpp  GUISystem.h  MouseSelectionSystem.cpp  MouseSelectionSystem.h  PointSystem.cpp  PointSystem.h  ScreenPositionSystem.cpp  ScreenPositionSystem.h  SelectionSystem.cpp  SelectionSystem.h  SortingSystem.cpp  SortingSystem.h  System.h  TorusSystem.cpp  TorusSystem.h  TransformationsSystem.cpp  TransformationsSystem.h
CAD/src/renderer/systems/CurveSegmentsMetrics/: BernsteinPolygonMetrics.cpp  BernsteinPolygonMetrics.h  ICurveSegmentsMetrics.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Window.h  main.cpp
src/Window/: Camera.h  Window.cpp  Window.h
src/Window/input/: CameraMovementInputHandler.cpp  CameraMovementInputHandler.h  InputEvent.h  InputHandler.h
src/Window/input/events/: InputEvent.h  MouseMoveEvent.h
src/Window/input/events/modded/: KeyEvent.h  MouseClickEvent.h
src/Window/input/handlers/: CameraMovementInputHandler.cpp  CameraMovementInputHandler.h
src/gl/shaders/: fragment.frag  vertex.vert
src/gl/wrappers/: Program.cpp  Program.h  Shader.cpp  VAO.h  VBO.h
src/renderer/: Elipsoide.cpp  Elipsoide.h  GUI.cpp  GUI.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
